# github-discussions-rag

./: .gitignore  Makefile  RAG_in_10_lines.ipynb  README.md  backend.py  data.py  data_model.py  embeddings.py  fetch_data.py  github_main.py  groq_main.py  main.py  pyproject.toml  test.py  ui_app.py
embeddings/: chroma_embedding.py  embeddings.py
src/: backend.py  utils.py
src/embeddings/: chroma_embedding.py  embeddings.py
src/github/: data_model.py  fetch_data.py
src/ui/: add_project.py  main.py  q_and_a.py  welcome.py
st_pages/: add_project.py  q_and_a.py  welcome.py
tests/: test.py
